Удалил окно добавления и перенес все элементы в страницу добавления

--- a/RenatSochnev320_PetsPhoto/RenatSochnev320_PetsPhoto.csproj
+++ b/RenatSochnev320_PetsPhoto/RenatSochnev320_PetsPhoto.csproj
@@ -104,6 +104,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MyPages\AddPhotoPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MyPages\AuthorizationPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -112,20 +116,16 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MyWindows\AddPhotoWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MyPages\AddPhotoPage.xaml.cs">
+      <DependentUpon>AddPhotoPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MyPages\AuthorizationPage.xaml.cs">
       <DependentUpon>AuthorizationPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="MyPages\InformationPage.xaml.cs">
       <DependentUpon>InformationPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="MyWindows\AddPhotoWindow.xaml.cs">
-      <DependentUpon>AddPhotoWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
